# bmtc-transit-app

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  CLAUDE.md  NEXT_STEPS.md  README.md  jest.config.js  jest.setup.js  jest.setupAfterEnv.js  jest.teardown.js  package-lock.json  package.json  sonar-project.properties  tsconfig.json
backend/: .env.example  .gitignore  2025-10-16-in-progress.txt  DESIGN_RATE_LIMIT.md  README.md  TESTING_SUMMARY.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt
backend/.claude/agents/: code-review-verifier.md
backend/app/: __init__.py  auth.py  bootstrap.py  config.py  db.py  errors.py  gtfs_bootstrap.py  idempotency.py  learning.py  main.py  models.py  rate_limit.py  routes.py  schema.sql  state.py
backend/app/migrations/: 003_rate_limit_down.sql  003_rate_limit_up.sql  004_idempotency_bodyhash_down.sql  004_idempotency_bodyhash_up.sql
backend/deploy/: bmtc-api.service  bmtc-backup.service  bmtc-backup.timer  bmtc-retention.service  bmtc-retention.timer
backend/scripts/: README.md  backup.sh  generate_sample_data.py  health_check.sh  rate_limit_cleanup.sh  restore.sh
backend/tests/: TEST_ISOLATION.md  TEST_ROUTES_SEARCH_COVERAGE.md  conftest.py  test_api_errors_alignment.py  test_api_gtfs_alignment.py  test_api_v1_alignment.py  test_global_aggregation.py  test_idempotency.py  test_idempotency_bodyhash.py  test_integration.py  test_learning.py  test_rate_limit.py  test_routes_search.py
design/: 01-system-architecture.md  02-technology-stack.md  03-data-models.md  04-realtime-architecture.md  07-api-design.md  (+10 more)
(+146 files in other folders)
