[project]
name = "bmtc-transit-api"
version = "0.1.0"
description = "BMTC Transit Learning API - Zero-cost backend MVP"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "slowapi==0.1.9",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "httpx==0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
]
